Added DC++ cache + some changes for future better DC++ integration in Shareaza code.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8715 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -4419,6 +4419,7 @@ BEGIN
     ID_HELP_GUIDE           "Visit the Shareaza Users Guide."
     ID_SEARCH_CHAT          "Open a chat session with the selected user."
     ID_HOSTCACHE_KAD_CACHE  "Show Kademlia cached hosts."
+    ID_HOSTCACHE_DC_CACHE   "Show DC++ cached hubs."
     ID_TRAFFIC_GRID         "Display grid lines."
     ID_TRAFFIC_AXIS         "Display Vertical Axis"
 END
