Added DC++ hub login support but no search or download support yet (added new CDCNeighbour class). You can try manual connection by typing hub address in "Connect To" dialog (default port is 411) and watching result in System log (debug level).
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8719 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_9.vcproj
+++ b/shareaza/Shareaza_9.vcproj
@@ -519,6 +519,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\DCNeighbour.cpp"
+				>
+			</File>
+			<File
 				RelativePath="DDEServer.cpp"
 				>
 			</File>
@@ -2133,6 +2137,10 @@
 			</File>
 			<File
 				RelativePath="Datagrams.h"
+				>
+			</File>
+			<File
+				RelativePath=".\DCNeighbour.h"
 				>
 			</File>
 			<File
