Implemented limited DC++ support. It CAN: connect to DC++ hubs in active mode, show all commands in system log, search for files on hub, answer on incoming searches, upload Library files, upload Library file list (files.xml.bz2), mount file lists as Library collections. It CAN NOT: download, request hub lists, chat, upload Library files TTH interleaves (only root hash), work in passive mode (firewalled).
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8731 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_9.vcproj
+++ b/shareaza/Shareaza_9.vcproj
@@ -519,7 +519,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\DCClient.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\DCNeighbour.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\DCPacket.cpp"
 				>
 			</File>
 			<File
@@ -2140,7 +2148,19 @@
 				>
 			</File>
 			<File
+				RelativePath=".\DCClient.h"
+				>
+			</File>
+			<File
 				RelativePath=".\DCNeighbour.h"
+				>
+			</File>
+			<File
+				RelativePath=".\DCPacket.h"
+				>
+			</File>
+			<File
+				RelativePath=".\DCStream.h"
 				>
 			</File>
 			<File
