Fixed crash caused by bad BitTorrent packet. All string function moved out to separate files: Strings.h/Strings.cpp. Fixed debug assert when Shareaza can not complete startup process, added diagnostic message of  network error  (primarily for Wine).
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8785 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/TorrentWizard/TorrentWizard_9.vcproj
+++ b/TorrentWizard/TorrentWizard_9.vcproj
@@ -469,6 +469,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath="..\shareaza\Strings.cpp"
+				>
+			</File>
+			<File
 				RelativePath="TorrentBuilder.cpp"
 				>
 			</File>
@@ -536,6 +540,10 @@
 			</File>
 			<File
 				RelativePath="StdAfx.h"
+				>
+			</File>
+			<File
+				RelativePath="..\shareaza\Strings.h"
 				>
 			</File>
 			<File
