Fixed "extra mouse click" bug of Copy URL dialog, some improvements.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8790 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -804,9 +804,9 @@ CAPTION "Copy URI"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
     LTEXT           "You can copy a URI for the selected item in a variety of different formats.  Please choose the format you wish to use by clicking one of the URIs below:",IDC_MESSAGE,10,10,270,30
-    CONTROL         "...",IDC_URL_MAGNET,"Static",SS_LEFTNOWORDWRAP | SS_NOPREFIX | SS_WORDELLIPSIS | WS_GROUP,10,40,270,10
-    CONTROL         "...",IDC_URL_ED2K,"Static",SS_LEFTNOWORDWRAP | SS_NOPREFIX | SS_WORDELLIPSIS | WS_GROUP,10,55,270,10
-    CONTROL         "...",IDC_URL_HOST,"Static",SS_LEFTNOWORDWRAP | SS_NOPREFIX | SS_WORDELLIPSIS | WS_GROUP,10,70,270,10
+    CONTROL         "...",IDC_URL_MAGNET,"Static",SS_LEFTNOWORDWRAP | SS_NOPREFIX | SS_NOTIFY | SS_WORDELLIPSIS | WS_GROUP,10,40,270,10
+    CONTROL         "...",IDC_URL_ED2K,"Static",SS_LEFTNOWORDWRAP | SS_NOPREFIX | SS_NOTIFY | SS_WORDELLIPSIS | WS_GROUP,10,55,270,10
+    CONTROL         "...",IDC_URL_HOST,"Static",SS_LEFTNOWORDWRAP | SS_NOPREFIX | SS_NOTIFY | SS_WORDELLIPSIS | WS_GROUP,10,70,270,10
     CONTROL         "Include &myself as a fixed source in the URL",IDC_INCLUDE_SELF,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,100,160,14
     PUSHBUTTON      "Cancel",IDCANCEL,225,97,60,16
