--- a/RegExp/RegExp_9.vcproj
+++ b/RegExp/RegExp_9.vcproj
@@ -48,6 +48,7 @@
 				AdditionalOptions="/Wall"
 				Optimization="0"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;REGEXP_EXPORTS"
+				ExceptionHandling="2"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
 				FloatingPointModel="2"
@@ -123,6 +124,7 @@
 				AdditionalOptions="/Wall"
 				Optimization="0"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;REGEXP_EXPORTS"
+				ExceptionHandling="2"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
 				FloatingPointModel="2"
@@ -203,6 +205,7 @@
 				OmitFramePointers="true"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;REGEXP_EXPORTS"
 				StringPooling="true"
+				ExceptionHandling="2"
 				RuntimeLibrary="0"
 				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
@@ -284,6 +287,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;REGEXP_EXPORTS"
+				ExceptionHandling="2"
 				RuntimeLibrary="0"
 				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
@@ -343,10 +347,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\regexpr2.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -382,10 +382,6 @@
 					/>
 				</FileConfiguration>
 			</File>
-			<File
-				RelativePath=".\syntax2.cpp"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -397,27 +393,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\regexpr2.h"
-				>
-			</File>
-			<File
-				RelativePath=".\reimpl2.h"
-				>
-			</File>
-			<File
 				RelativePath=".\Resource.h"
 				>
 			</File>
 			<File
-				RelativePath=".\restack.h"
-				>
-			</File>
-			<File
 				RelativePath=".\stdafx.h"
-				>
-			</File>
-			<File
-				RelativePath=".\syntax2.h"
 				>
 			</File>
 			<File
